Fix stats being invisible

--- a/src/css/_map.scss
+++ b/src/css/_map.scss
@@ -12,7 +12,7 @@ $map-height: 894px;
         }
         & > .nts-map__map,
         & > .nts-map__tests,
-        & > .nts-map__year {
+        & > .nts-map__stats {
             margin-left: -50%;
         }
     }
